service.yml
apiVersion: v1
kind: Service
metadata:
  name: metrics-sla
  labels:
    app: metrics-sla
    service: metrics-sla
spec:
  selector:
    app: metrics-sla
  ports:
    - name: http
      port: 80
      targetPort: APP_PORT
      protocol: TCP
  type: NodePort
